--- a/styles/main.css
+++ b/styles/main.css
@@ -129,6 +129,10 @@
   flex-direction: column;
 }
 
+.box-safety a:hover {
+  color: #24e0fb;
+}
+
 .box-safety h2 {
   color: var(--text-sub);
   margin-bottom: 4rem;
@@ -154,6 +158,7 @@
   font-size: 1.2rem;
   font-weight: 600;
   margin-top: 5rem;
+  cursor: pointer;
 }
 
 .line-text-safety {
@@ -224,6 +229,11 @@
   font-size: 2rem;
   font-weight: 500;
   word-spacing: 1rem;
+  cursor: pointer;
+}
+
+.title-register h3:hover {
+  color: #24e0fb;
 }
 .title-register img {
   width: 6rem;
